# jenkins-cli

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: main.yml
src/: cli.rs  client.rs  config.rs  error.rs  main.rs  models.rs  output.rs
src/commands/: auth.rs  build.rs  job.rs  logs.rs  mcp.rs  mod.rs  status.rs
