[package]
name = "jenkins-cli"
version = "0.1.0"
edition = "2021"
description = "Jenkins CLI + MCP server"
license = "MIT"

[[bin]]
name = "jenkins"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
owo-colors = "4"
thiserror = "2"
dirs = "5"
dialoguer = "0.11"
rmcp = { version = "2.2.0", features = ["macros", "schemars", "server", "transport-io"] }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "io-std"] }
schemars = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
httpmock = "0.7"
tempfile = "3"
